tests/macro-tests/cases/ui_node/delegate_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANode: zng::prelude::UiNode` is not satisfied
 --> cases/ui_node/delegate_expr_error_incorrect_type.rs:9:22
  |
9 | #[ui_node(delegate = &mut self.inner)]
  | ---------------------^----------------
  | |                    |
  | |                    the trait `zng::prelude::UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zng::prelude::UiNode`:
            <implementers-list>
